# doodle

./: README.md  flake.nix  justfile
client/: build.ninja  main.c
core/: Cargo.toml
core/src/: lib.rs
scrobble-client/: .gitignore  fetch.go  main.go  scrobble.go  test.fish
server/: database.db  gleam.toml  manifest.toml
server/src/: action.gleam  doodle.gleam  doodle_server.gleam  request.gleam  response.gleam  scrobble.gleam  song.gleam
server/src/ffi/: core.gleam  doodle_core.erl
server/src/ffi/erlang/: file.gleam
